cluster/apps/kumbuka/kumbuka/networkpolicies/envoy-gateway-egress-lore.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-kumbuka
  namespace: network
spec:
  description: Allow all gateway egress traffic to kumbuka
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kumbuka
            app.kubernetes.io/component: kumbuka
            "k8s:io.kubernetes.pod.namespace": kumbuka
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
