cluster/apps/kumbuka/kumbuka/networkpolicies/kumbuka.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kumbuka
  namespace: kumbuka
spec:
  description: "Policy for kumbuka"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kumbuka
      app.kubernetes.io/component: kumbuka
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: kumbuka-postgres
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": kumbuka
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000" # /healthz endpoint
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "10443" # oidc: to access load balancer (https://auth.${BASE_DOMAIN})
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mailbridge
            "k8s:io.kubernetes.pod.namespace": kumbuka
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: html2pdf
            "k8s:io.kubernetes.pod.namespace": kumbuka
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toFQDNs:
        - matchName: kumbuka.me # Plugins Catalog
        - matchName: api.github.com # Plugins
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
